<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment2</string>
    <string name="labelEditCountry">Edit country</string>
    <string name="labelEditYear">Edit year</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_visited_countries">Visited Countries</string>
    <string name="labelYear">Year:</string>
    <string name="labelCountry">Country:</string>
    <string name="buttonSaveCountry">Save</string>
    <string name="addCountry">Add Country</string>
    <string name="menuDeleteVisit">Delete</string>
    <string name="menuEditVisit">Edit</string>
    <string name="title_activity_edit_visited_countries">Edit</string>
    <string name="buttonCancelCountry">Cancel</string>
    <string name="changeSortOrder">Change sort order</string>
    <string name="sortByCountryAsc">Country</string>
    <string name="sortByCountryDesc">Country (desc)</string>
    <string name="sortByYearAsc">Year</string>
    <string name="sortByYearDesc">Year (desc)</string>
    <string name="pref_textSize">Text size</string>
    <string name="size_settings">Change text size</string>
    <string name="menuSettings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="bgcolor_settings">Change background color</string>
    <string name="pref_bgcolor">Background color</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="alarmSave">Save</string>
    <string name="title_activity_alarm_list">Alarm</string>
    <string name="addAlarm">Add Alarm</string>
    <string name="alarmCurrentTime">Current time:</string>
    <string name="menuDeleteAlarm">Delete alarm</string>
    <string name="title_activity_alarm_notice">Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="alarmStopButton">Stop</string>
    <string name="title_alarm_notice">Alarm</string>

</resources>
